# MDTP

./: CMakeLists.txt  README.md
.test/: main.cpp
include/: library.h
include/MDTP/: core.h
include/MDTP/data/: MDTPOptions.h
include/MDTP/parser/: parser.h
include/MDTP/parser/header/: MDTPHeader.h
include/MDTP/socket/: AbstractBaseSocket.h  MDTPClient.h  MDTPServer.h
include/MDTP/socket/connection/: MDTPConnection.h
include/parser/: parser.h
src/: core.cpp  library.cpp
src/data/: MDTPOptions.cpp
src/parser/: parser.cpp
src/parser/header/: MDTPHeader.cpp
src/socket/: AbstractBaseSocket.cpp  MDTPClient.cpp  MDTPServer.cpp
src/socket/connection/: MDTPConnection.cpp
